repair all DS
